--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -5,7 +5,7 @@
     padding: 0;
     background-color: rgb(147, 191, 207);
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    /* align-items: center; */
 }
 
